commande_moteur/log/build_2023-11-08_12-07-00/dinamyxelAx12/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/adrien/py_proto_ros2/install/dinamyxelAx12/lib/python3.10/site-packages/dinamyxelAx12/dinamyxelAx12.py", line 14
    motor_id = 2s
               ^
SyntaxError: invalid decimal literal

